force-app/main/default/objects/ABM_Milestone__c/ABM_Milestone__c.object-meta.xml
<CustomObject>
    <label>ABM Milestone</label>
    <nameField>
        <label>ABM Milestone Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ABM Milestones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>