force-app/main/default/objects/ABM_Milestone__c/fields/ABM_Account__c.field-meta.xml
<CustomField>
    <fullName>ABM_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ABM Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>ABM Milestones</relationshipLabel>
    <relationshipName>ABM_Milestones</relationshipName>
    <type>Lookup</type>
</CustomField>