force-app/main/default/objects/ABM_Milestone__c/fields/Closed_Lost_Opps__c.field-meta.xml
<CustomField>
    <fullName>Closed_Lost_Opps__c</fullName>
    <label>Closed Lost Opps</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>