force-app/main/default/objects/ABM_Milestone__c/fields/Contacts__c.field-meta.xml
<CustomField>
    <fullName>Contacts__c</fullName>
    <label># Contacts</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>