force-app/main/default/objects/ABM_Milestone__c/fields/Leads__c.field-meta.xml
<CustomField>
    <fullName>Leads__c</fullName>
    <label># Leads</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>