force-app/main/default/objects/ABM_Milestone__c/fields/Lifetime_Opps_All__c.field-meta.xml
<CustomField>
    <fullName>Lifetime_Opps_All__c</fullName>
    <label>Lifetime Opps (All)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>