force-app/main/default/objects/ABM_Milestone__c/fields/Open_Opps__c.field-meta.xml
<CustomField>
    <fullName>Open_Opps__c</fullName>
    <label>Open Opps</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>