force-app/main/default/objects/ABM_Milestone__c/fields/Scored_People__c.field-meta.xml
<CustomField>
    <fullName>Scored_People__c</fullName>
    <label># Scored People</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>