force-app/main/default/objects/ABM_Milestone__c/fields/Total_Assoc_People__c.field-meta.xml
<CustomField>
    <fullName>Total_Assoc_People__c</fullName>
    <formula>Contacts__c  + Leads__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># Total Assoc People</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>