force-app/main/default/objects/ABM_Milestone__c/fields/Value_Closed_Won_Opps__c.field-meta.xml
<CustomField>
    <fullName>Value_Closed_Won_Opps__c</fullName>
    <label>Value Closed Won Opps</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>