force-app/main/default/objects/ABM_Milestone__c/fields/Value_Open_Opps__c.field-meta.xml
<CustomField>
    <fullName>Value_Open_Opps__c</fullName>
    <label>Value Open Opps</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>